mock the leaderboards response for now
