# api/user/handler.js
@@ -1,13 +1,8 @@
-const leaderboards = require('leaderboards');
-exports.handler = async (event, context) => {
-    // TODO implement
-    if(event && event.pathParameters && event.pathParameters.user) {
-        console.log(user);
-    }
+const leaderboards = require('./leaderboard');
+module.exports.invoke = async (event, context) => {
+   const responseBody = leaderboards.getLeaderBoards();
 
-    const responseBody = getLeaderBoards();
-
-    const response = {
+   const response = {
         statusCode: 200,
         headers: {"Content-Type": "application/json"},
         body: JSON.stringify(responseBody)
